py-flask-flatpages: updated to 0.8.3
0.8.3

Deprecation Notes

In line with the Flask Extension Guidelines, this release
deprecates accessing the configured application instance via the
FlatPages instance.

In versions 0.9 and up, the .app property will instead wrap
flask.current_app, and thus raise a RuntimeError if it's accessed
without an Application Context pushed. Please see the Flask docs
for more details on managing this context

Bug Fixes

Correct a typo in the optional-dependencies block. The test suite
has also been updated to use the project dependencies directly
rather than a hardcoded list in the tox config.

Other Notes

This release includes explicit testing for Python 3.13, and drops
support for Python 3.6. As off November 2024, PyPI Stats reports no
installations on Python 3.6.

--- a/www/py-flask-flatpages/Makefile
+++ b/www/py-flask-flatpages/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.21 2024/11/11 07:29:22 wiz Exp $
+# $NetBSD: Makefile,v 1.22 2025/01/02 14:23:32 adam Exp $
 
-DISTNAME=	Flask-FlatPages-0.8.2
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:tl}
+DISTNAME=	flask_flatpages-0.8.3
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=F/Flask-FlatPages/}
 
@@ -9,6 +9,8 @@ MAINTAINER=	kleink@NetBSD.org
 HOMEPAGE=	https://github.com/SimonSapin/Flask-FlatPages
 COMMENT=	Provides flat static pages to a Flask application
 LICENSE=	modified-bsd
+
+WHEEL_NAME=	${DISTNAME:S/flask_flatpages/Flask_FlatPages/}
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-flask>1.0:../../www/py-flask
@@ -19,8 +21,6 @@ DEPENDS+=	${PYPKGPREFIX}-yaml>5.3.1:../../textproc/py-yaml
 TEST_DEPENDS+=	${PYPKGPREFIX}-pygments-[0-9]*:../../textproc/py-pygments
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "options.mk"
 
