--- a/www/py-flask-limiter/Makefile
+++ b/www/py-flask-limiter/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.14 2024/11/11 07:29:23 wiz Exp $
+# $NetBSD: Makefile,v 1.15 2025/01/02 14:24:54 adam Exp $
 
-DISTNAME=	flask_limiter-3.8.0
+DISTNAME=	flask_limiter-3.9.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=F/Flask-Limiter/}
@@ -22,8 +22,6 @@ TEST_DEPENDS+=	${PYPKGPREFIX}-flask-restful>=0:../../www/py-flask-restful
 # also needs unpackaged 'hiro' for testing
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
