--- a/devel/glibmm2.68/Makefile
+++ b/devel/glibmm2.68/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.9 2024/04/15 09:27:50 adam Exp $
+# $NetBSD: Makefile,v 1.10 2025/01/02 15:04:23 prlw1 Exp $
 
-DISTNAME=	glibmm-2.80.0
+DISTNAME=	glibmm-2.82.0
 PKGNAME=	${DISTNAME:S/glibmm/glibmm2.68/}
 CATEGORIES=	devel gnome
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/glibmm/${PKGVERSION_NOREV:R}/}
@@ -37,7 +37,7 @@ PLIST_VARS+=	notmac
 PLIST.notmac=	yes
 .endif
 
-BUILDLINK_API_DEPENDS.glib2+=	glib2>=2.80.0
+BUILDLINK_API_DEPENDS.glib2+=	glib2>=2.81.0
 .include "../../devel/glib2/buildlink3.mk"
 .include "../../devel/libsigc++3/buildlink3.mk"
 .include "../../devel/meson/build.mk"
