--- a/lang/go123/Makefile
+++ b/lang/go123/Makefile
@@ -1,5 +1,6 @@
-# $NetBSD: Makefile,v 1.5 2024/12/04 18:51:39 bsiegert Exp $
+# $NetBSD: Makefile,v 1.6 2025/01/02 19:53:12 bsiegert Exp $
 
+PKGREVISION=	1
 .include "../../lang/go/version.mk"
 GO_BOOTSTRAP_REQD=	120
 .include "../../lang/go/bootstrap.mk"
@@ -18,6 +19,11 @@ LICENSE=	modified-bsd
 
 WRKSRC=		${WRKDIR}/go
 USE_TOOLS+=	bash:run perl:run pax
+
+# Patch to stop requiring /proc to be mounted on NetBSD
+PATCH_SITES=		https://github.com/golang/go/commit/
+PATCHFILES=		80344887818a2321296ce7fa71cca8ca2520611d.diff
+PATCH_DIST_STRIP=	-p1
 
 # cgo compiles under TMPDIR
 TMPDIR?=	/tmp
@@ -93,6 +99,9 @@ PRINT_PLIST_AWK+=	/^bin\/gofmt${GOVERSSUFFIX}/ { print "bin/gofmt$${GOVERSSUFFIX
 
 post-extract:
 	${RM} -r -f ${WRKSRC}/test/fixedbugs/issue27836*
+
+post-patch:
+	${RM} -f ${WRKSRC}/src/os/*.orig_dist
 
 do-build:
 	cd ${WRKSRC}/src && \
