--- a/devel/py-argcomplete/Makefile
+++ b/devel/py-argcomplete/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.46 2025/01/02 13:48:57 adam Exp $
+# $NetBSD: Makefile,v 1.47 2025/01/02 21:33:14 kim Exp $
 
 DISTNAME=	argcomplete-3.5.3
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -10,6 +10,7 @@ HOMEPAGE=	https://github.com/kislyuk/argcomplete
 COMMENT=	Bash and other shells tab completion for argparse
 LICENSE=	apache-2.0
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-hatchling-[0-9]*:../../devel/py-hatchling
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=67.7.2:../../devel/py-setuptools
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=6.2:../../devel/py-setuptools_scm
 TEST_DEPENDS+=	${PYPKGPREFIX}-coverage-[0-9]*:../../devel/py-coverage
