--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4381 2025/01/02 07:15:50 taca Exp $
+# $NetBSD: Makefile,v 1.4382 2025/01/02 21:44:43 pin Exp $
 #
 
 COMMENT=	Development utilities
@@ -217,6 +217,7 @@ SUBDIR+=	cargo-about
 SUBDIR+=	cargo-binutils
 SUBDIR+=	cargo-bloat
 SUBDIR+=	cargo-c
+SUBDIR+=	cargo-lincenses
 SUBDIR+=	cargo-modules
 SUBDIR+=	cargo-outdated
 SUBDIR+=	cargo-release
