--- a/devel/ruby-railties72/Makefile
+++ b/devel/ruby-railties72/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.1 2024/12/13 16:55:10 taca Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/03 02:35:40 taca Exp $
 
 DISTNAME=	railties-${RAILS_VERSION}
 PKGNAME=	${RUBY_PKGPREFIX}-railties${RUBY_RAILS}-${RAILS_VERSION}
+PKGREVISION=	1
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -13,7 +14,6 @@ DEPENDS+=	${RUBY_ACTIONPACK_DEPENDS}
 DEPENDS+=	${RUBY_PKGPREFIX}-rackup>=1.0.0:../../www/ruby-rackup
 DEPENDS+=	${RUBY_PKGPREFIX}-thor>=1.0<2:../../devel/ruby-thor
 DEPENDS+=	${RUBY_PKGPREFIX}-zeitwerk>=2.6<3:../../devel/ruby-zeitwerk
-DEPENDS+=	${RUBY_PKGPREFIX}-irb>=1.13<2:../../devel/ruby-irb
 
 USE_LANGUAGES=	# none
 
@@ -22,6 +22,11 @@ RUBY_RAILS_STRICT_DEP=	yes
 RUBYGEM_OPTIONS+=	--format-executable
 OVERRIDE_GEMSPEC+=	:executables rails=rails${RUBY_RAILS} \
 			:files exe/rails=exe/rails${RUBY_RAILS}
+
+.include "../../lang/ruby/rubyversion.mk"
+.if ${RUBY_VER} < 33
+DEPENDS+=	${RUBY_PKGPREFIX}-irb>=1.13<2:../../devel/ruby-irb
+.endif
 
 pre-configure:
 	${TEST} -f ${WRKSRC}/exe/rails${RUBY_RAILS} || \
