--- a/textproc/ruby-sary/Makefile
+++ b/textproc/ruby-sary/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.25 2021/12/08 16:06:46 adam Exp $
+# $NetBSD: Makefile,v 1.26 2025/01/03 02:43:58 taca Exp $
 #
 
 DISTNAME=	sary-ruby-1.2.0
@@ -11,6 +11,8 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://sary.sourceforge.net/
 COMMENT=	Ruby Binding of Sary
 LICENSE=	gnu-lgpl-v2.1
+
+RUBY_VERSIONS_ACCEPTED=	31 32 33
 
 USE_RUBY_EXTCONF=	yes
 USE_TOOLS+=		pkg-config
