nodejs*: reflect minimum libcares 1.28 dependency
As noted by nagae@eagan.jp in PR pkg/58951, nodejs 23.5.0 expects a
newer version of libcares than what we set as its general minimum API
required. Not necessarily relevant for older nodejs versions, but also
harmless to apply universally, given pkgsrc has already moved well past
that version.

--- a/lang/nodejs/Makefile.common
+++ b/lang/nodejs/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.60 2024/11/27 21:59:55 riastradh Exp $
+# $NetBSD: Makefile.common,v 1.61 2025/01/03 04:06:53 gutteridge Exp $
 # used by lang/nodejs/Makefile
 # used by lang/nodejs18/Makefile
 # used by lang/nodejs20/Makefile
@@ -94,6 +94,7 @@ BUILDLINK_API_DEPENDS.libuv+=	libuv>=1.49
 .include "../../lang/python/application.mk"
 .include "../../lang/python/batteries-included.mk"
 .include "../../lang/python/tool.mk"
+BUILDLINK_API_DEPENDS.libcares+=	libcares>=1.28.0
 .include "../../net/libcares/buildlink3.mk"
 .include "../../textproc/icu/buildlink3.mk"
 # Requires nghttp2_option_set_max_settings
