--- a/textproc/R-rbibutils/Makefile
+++ b/textproc/R-rbibutils/Makefile
@@ -1,12 +1,24 @@
-# $NetBSD: Makefile,v 1.1 2022/12/18 06:09:59 mef Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/03 09:09:35 mef Exp $
 
 R_PKGNAME=	rbibutils
-R_PKGVER=	2.2.11
+R_PKGVER=	2.3
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Read 'Bibtex' Files and Convert Between Bibliography Formats
 LICENSE=	gnu-gpl-v2
+
+TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-geometry-[0-9]*:../../print/tex-geometry
+TEST_DEPENDS+=	tex-hyperref-[0-9]*:../../print/tex-hyperref
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-natbib-[0-9]*:../../print/tex-natbib
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xcolor-[0-9]*:../../print/tex-xcolor
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c
 
