--- a/devel/py-usb/Makefile
+++ b/devel/py-usb/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.24 2023/06/06 12:41:15 riastradh Exp $
+# $NetBSD: Makefile,v 1.25 2025/01/03 10:13:58 adam Exp $
 
-DISTNAME=	pyusb-1.2.1
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/pyusb/usb/}
-CATEGORIES=	devel
+DISTNAME=	pyusb-1.3.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/py//}
+CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pyusb/}
 
 MAINTAINER=	wiml@hhhh.org
@@ -10,12 +10,11 @@ HOMEPAGE=	https://pyusb.github.io/pyusb/
 COMMENT=	Python interface to USB via libusb
 LICENSE=	modified-bsd
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=30.3.0:../../devel/py-setuptools
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=1.15.0:../../devel/py-setuptools_scm
 
 CFLAGS.SunOS+=	-Du_int8_t=uint8_t -Du_int16_t=uint16_t -Du_int32_t=uint32_t
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
 .include "../../mk/libusb.buildlink3.mk"
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
