--- a/lang/py-mypy/Makefile
+++ b/lang/py-mypy/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.58 2024/11/11 07:28:37 wiz Exp $
+# $NetBSD: Makefile,v 1.59 2025/01/03 10:56:46 adam Exp $
 
-DISTNAME=	mypy-1.13.0
+DISTNAME=	mypy-1.14.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	lang python
 MASTER_SITES=	${MASTER_SITE_PYPI:=m/mypy/}
