--- a/converters/py-emoji/Makefile
+++ b/converters/py-emoji/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.15 2024/11/11 07:27:55 wiz Exp $
+# $NetBSD: Makefile,v 1.16 2025/01/03 11:58:38 adam Exp $
 
-DISTNAME=	emoji-2.12.1
+DISTNAME=	emoji-2.14.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	converters python
 MASTER_SITES=	${MASTER_SITE_PYPI:=e/emoji/}
@@ -11,11 +11,8 @@ COMMENT=	ASCII<->Emoji conversion library for Python
 LICENSE=	modified-bsd
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=65.0.0:../../devel/py-setuptools
-DEPENDS+=	${PYPKGPREFIX}-typing-extensions>=4.7.0:../../devel/py-typing-extensions
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
