--- a/net/py-modbus-cli/Makefile
+++ b/net/py-modbus-cli/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.1 2024/11/05 11:14:10 wiz Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/03 12:00:45 adam Exp $
 
-DISTNAME=	modbus_cli-0.1.9
+DISTNAME=	modbus_cli-0.1.10
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	net python
 MASTER_SITES=	${MASTER_SITE_PYPI:=m/modbus_cli/}
@@ -10,7 +10,7 @@ HOMEPAGE=	https://github.com/favalex/modbus-cli
 COMMENT=	Command line tool to access Modbus devices
 LICENSE=	mpl-2.0
 
-DEPENDS+=	${PYPKGPREFIX}-setuptools>=0:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=0:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-colorama>=0:../../comms/py-colorama
 DEPENDS+=	${PYPKGPREFIX}-uModbus>=0:../../net/py-uModbus
 
