--- a/devel/py-pathvalidate/Makefile
+++ b/devel/py-pathvalidate/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.6 2024/11/11 07:28:17 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2025/01/03 13:47:41 adam Exp $
 
-DISTNAME=	pathvalidate-3.2.1
+DISTNAME=	pathvalidate-3.2.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pathvalidate/}
