--- a/www/hiawatha/Makefile
+++ b/www/hiawatha/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.44 2025/01/03 16:35:32 hauke Exp $
+# $NetBSD: Makefile,v 1.45 2025/01/03 17:40:51 hauke Exp $
 
 PKGNAME=	hiawatha-${PKGVER}
 DISTNAME=	hiawatha-v${PKGVER}
 PKGVER=		11.6
-PKGREVISION=	7
+PKGREVISION=	8
 CATEGORIES=	www
 MASTER_SITES=	${MASTER_SITE_GITLAB:=hsleisink/hiawatha/-/archive/v${PKGVER}/}
 EXTRACT_SUFX=	.tar.gz
@@ -77,13 +77,13 @@ SUBST_SED.path=		-e 's,/usr,${PREFIX},g'
 
 SUBST_CLASSES+=		uid
 SUBST_STAGE.uid=	pre-configure
-SUBST_MESSAGE.uid=	Configure Hiawatha user and group
+SUBST_MESSAGE.uid=	Configuring Hiawatha user and group.
 SUBST_FILES.uid=	config/hiawatha.conf.in
 SUBST_VARS.uid=		HIAWATHA_USER HIAWATHA_GROUP
 
-SUBST_CLASSES=+		url
+SUBST_CLASSES+=		url
 SUBST_STAGE.url=	pre-configure
-SUBST_MESSAGE.url=	Updating upstream web url
+SUBST_MESSAGE.url=	Updating upstream web URL.
 SUBST_FILES.url=	config/index.xslt
 SUBST_FILES.url+=	extra/index.html
 SUBST_FILES.url+=	man/cgi-wrapper.1.in
@@ -98,7 +98,7 @@ SUBST_SED.url+=		-e 's/@hiawatha-webserver.org/@leisink.net/g'
 .if !empty(HIAWATHA_REPLACE_MBEDTLS:Myes)
 SUBST_CLASSES+=		mbopt
 SUBST_STAGE.mbopt=	pre-configure
-SUBST_MESSAGE.mbopt=	Setting options for updated mbedtls library
+SUBST_MESSAGE.mbopt=	Setting options for updated mbedtls library.
 SUBST_FILES.mbopt=	mbedtls/include/mbedtls/mbedtls_config.h
 # Enable threading support
 SUBST_SED.mbopt=	-E -e 's,^//(\#define MBEDTLS_THREADING_PTHREAD),\1,g'
