(time/R-RcppCCTZ) experimental fix for error: '::vfwscanf' has not been declared

--- a/time/R-RcppCCTZ/Makefile
+++ b/time/R-RcppCCTZ/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2024/11/30 20:51:35 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/03 23:31:41 mef Exp $
 
 R_PKGNAME=	RcppCCTZ
 R_PKGVER=	0.2.12
@@ -17,7 +17,17 @@ TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
 TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=		c c++
-USE_CXX_FEATURES+=	c++11
+.include "../../mk/bsd.prefs.mk"
+
+# https://mail-index.netbsd.org/pkgsrc-users/2025/01/02/msg040775.html
+# See  
+#   /usr/include/wchar.h
+#   /usr/pkg/gcc7/lib/gcc/x86_64--netbsd/7.5.0/include-fixed/wchar.h
+.if ${OPSYS} == "NetBSD"
+.  if ${OPSYS_VERSION} < 090900
+CWRAPPERS_APPEND.cxx=	-D_NETBSD_SOURCE
+.  endif
+.endif
 
 .include "../../math/R/Makefile.extension"
 .include "../../devel/R-Rcpp/buildlink3.mk"
