--- a/textproc/R-reprex/Makefile
+++ b/textproc/R-reprex/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2024/01/18 15:12:23 mef Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/03 23:44:24 mef Exp $
 
 R_PKGNAME=	reprex
-R_PKGVER=	2.1.0
+R_PKGVER=	2.1.1
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -20,7 +20,7 @@ DEPENDS+=	R-knitr>=1.23:../../print/R-knitr
 DEPENDS+=	R-rmarkdown>=2.10:../../textproc/R-rmarkdown
 
 # Packages suggested but not available:
-# 'fortunes', 'rprojroot', 'styler'
+# 'fortunes', 'styler'
 
 TEST_DEPENDS+=	R-covr-[0-9]*:../../devel/R-covr
 TEST_DEPENDS+=	R-miniUI-[0-9]*:../../www/R-miniUI
