--- a/textproc/R-rjson/Makefile
+++ b/textproc/R-rjson/Makefile
@@ -1,12 +1,19 @@
-# $NetBSD: Makefile,v 1.2 2023/06/10 12:28:29 mef Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/03 23:57:17 mef Exp $
 
 R_PKGNAME=	rjson
-R_PKGVER=	0.2.21
+R_PKGVER=	0.2.23
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	JSON for R
 LICENSE=	gnu-gpl-v2
+
+# !pdfTeX error: pdflatex (file ecti1000): Font ecti1000 at 600 not found
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c c++
 
