--- a/textproc/R-stringi/Makefile
+++ b/textproc/R-stringi/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.35 2024/11/14 22:21:49 wiz Exp $
+# $NetBSD: Makefile,v 1.36 2025/01/04 00:33:27 mef Exp $
 
 R_PKGNAME=	stringi
-R_PKGVER=	1.8.3
-PKGREVISION=	4
+R_PKGVER=	1.8.4
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
