--- a/textproc/R-stringr/Makefile
+++ b/textproc/R-stringr/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2023/03/12 08:54:41 mef Exp $
+# $NetBSD: Makefile,v 1.10 2025/01/04 00:39:28 mef Exp $
 
 R_PKGNAME=	stringr
-R_PKGVER=	1.5.0
+R_PKGVER=	1.5.1
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -16,10 +16,13 @@ DEPENDS+=	R-rlang-[0-9]*:../../devel/R-rlang
 DEPENDS+=	R-stringi>=1.1.7:../../textproc/R-stringi
 DEPENDS+=	R-vctrs-[0-9]*:../../math/R-vctrs
 
+# Package suggested but not available: 'gt'
+TEST_DEPENDS+=	R-covr-[0-9]*:../../devel/R-covr
+TEST_DEPENDS+=	R-dplyr-[0-9]*:../../math/R-dplyr
+TEST_DEPENDS+=	R-htmlwidgets-[0-9]*:../../www/R-htmlwidgets
 TEST_DEPENDS+=	R-knitr-[0-9]*:../../print/R-knitr
 TEST_DEPENDS+=	R-rmarkdown-[0-9]*:../../textproc/R-rmarkdown
 TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
-TEST_DEPENDS+=	R-covr-[0-9]*:../../devel/R-covr
 
 USE_LANGUAGES=	# none
 
