--- a/textproc/R-utf8/Makefile
+++ b/textproc/R-utf8/Makefile
@@ -1,14 +1,24 @@
-# $NetBSD: Makefile,v 1.5 2021/06/05 08:13:45 mef Exp $
+# $NetBSD: Makefile,v 1.6 2025/01/04 00:47:31 mef Exp $
 
 R_PKGNAME=	utf8
-R_PKGVER=	1.2.1
+R_PKGVER=	1.2.4
 CATEGORIES=	textproc
 
 MAINTAINER=	minskim@NetBSD.org
 COMMENT=	Unicode text processing
 LICENSE=	apache-2.0
 
+TEST_DEPENDS+=	R-covr-[0-9]*:../../devel/R-covr
+TEST_DEPENDS+=	R-knitr-[0-9]*:../../print/R-knitr
+TEST_DEPENDS+=	R-rmarkdown-[0-9]*:../../textproc/R-rmarkdown
 TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+
+# !pdfTeX error: pdflatex (file tctt1000): Font tctt1000 at 600 not found
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c
 
