--- a/benchmarks/R-mlbench/Makefile
+++ b/benchmarks/R-mlbench/Makefile
@@ -1,12 +1,18 @@
-# $NetBSD: Makefile,v 1.1 2022/12/18 12:50:30 mef Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/04 01:23:21 mef Exp $
 
 R_PKGNAME=	mlbench
-R_PKGVER=	2.1-3
+R_PKGVER=	2.1-6
 CATEGORIES=	benchmarks
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Machine Learning Benchmark Problems
 LICENSE=	gnu-gpl-v2
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c
 
