--- a/geography/R-s2/Makefile
+++ b/geography/R-s2/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2024/12/01 05:00:41 mef Exp $
+# $NetBSD: Makefile,v 1.7 2025/01/04 05:30:57 mef Exp $
 
 R_PKGNAME=	s2
 R_PKGVER=	1.1.7
@@ -18,7 +18,15 @@ TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
 TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
 TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
-USE_LANGUAGES=	c c++
+USE_LANGUAGES=		c c++
+.include "../../mk/bsd.prefs.mk"
+
+# https://mail-index.netbsd.org/pkgsrc-users/2025/01/02/msg040775.html
+.if ${OPSYS} == "NetBSD"
+.  if ${OPSYS_VERSION} < 090900
+CWRAPPERS_APPEND.cxx=	-D_NETBSD_SOURCE
+.  endif
+.endif
 
 .include "../../math/R/Makefile.extension"
 .include "../../devel/R-Rcpp/buildlink3.mk"
