--- a/devel/py-importlib-resources/Makefile
+++ b/devel/py-importlib-resources/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.30 2024/11/11 07:28:11 wiz Exp $
+# $NetBSD: Makefile,v 1.31 2025/01/04 06:37:24 adam Exp $
 
-DISTNAME=	importlib_resources-6.4.5
+DISTNAME=	importlib_resources-6.5.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=i/importlib_resources/}
@@ -10,12 +10,9 @@ HOMEPAGE=	https://importlib-resources.readthedocs.io/
 COMMENT=	Read resources from Python packages
 LICENSE=	apache-2.0
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=56:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=61.2:../../devel/py-setuptools
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=3.4.1:../../devel/py-setuptools_scm
 TEST_DEPENDS+=	${PYPKGPREFIX}-jaraco.test>=5.4:../../devel/py-jaraco.test
-TEST_DEPENDS+=	${PYPKGPREFIX}-test-checkdocs>=2.4:../../devel/py-test-checkdocs
-TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov-[0-9]*:../../devel/py-test-cov
-TEST_DEPENDS+=	${PYPKGPREFIX}-test-mypy-[0-9]*:../../devel/py-test-mypy
 TEST_DEPENDS+=	${PYPKGPREFIX}-zipp>=3.17:../../archivers/py-zipp
 
 USE_LANGUAGES=	# none
