--- a/finance/R-bayesm/Makefile
+++ b/finance/R-bayesm/Makefile
@@ -1,12 +1,21 @@
-# $NetBSD: Makefile,v 1.3 2023/06/12 15:33:04 mef Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/04 14:38:30 mef Exp $
 
 R_PKGNAME=	bayesm
-R_PKGVER=	3.1-5
+R_PKGVER=	3.1-6
 CATEGORIES=	finance
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Bayesian inference for marketing/micro-econometrics
 LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
+
+TEST_DEPENDS+=	R-knitr-[0-9]*:../../print/R-knitr
+TEST_DEPENDS+=	R-rmarkdown-[0-9]*:../../textproc/R-rmarkdown
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c c++ fortran
 
