--- a/benchmarks/R-profvis/Makefile
+++ b/benchmarks/R-profvis/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.1 2022/12/18 09:25:00 mef Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/04 14:58:21 mef Exp $
 
 R_PKGNAME=	profvis
-R_PKGVER=	0.3.7
+R_PKGVER=	0.4.0
 CATEGORIES=	benchmarks
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -10,6 +10,16 @@ LICENSE=	gnu-gpl-v3 # See more for LICENSE file
 
 DEPENDS+=	R-stringr>=1.4.0:../../textproc/R-stringr
 DEPENDS+=	R-htmlwidgets>=0.3.2:../../www/R-htmlwidgets
+
+TEST_DEPENDS+=	R-shiny-[0-9]*:../../www/R-shiny
+TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+
+# !pdfTeX error: pdflatex (file tctt0900): Font tctt0900 at 600 not found
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	c
 
