(finance/R-timeSeries) Updated 3062.100 to 4041.111
## timeSeries 4041.111

- now 'timeSeries' depends on 'timeDate' version 4041.110 or later.  If you have
  an older version of 'timeSeries' and it stops working after updating
  'timeDate', install the latest version of 'timeSeries'.

  The incompatibility was necessitated by the need to fix a bug.


## timeSeries 4041.110

- this is a technical update, there are no user visible changes (there was an
  explicit call to `timeDate::months` in the code, but the upcoming v4041.110 of
  timeDate doesn't export `months` anymore).


## timeSeries 4032.109

- deprecated function `returnSeries` is now defunct, use `returns` instead.

- a number of generic functions from base R now get only S3 methods for
  'timeSeries' objects. Previously they were turned into S4 generics with S4
  methods.

- streamlined timeSeries methods for a number of functions. Left only S3 methods
  or only S4 methods were suitable.

- consolidated the NAMESPACE.


## timeSeries 4032.108

- fixed 'Lost braces; missing escapes or markup?' NOTE from CRAN.


## timeSeries 4031.107

- refactored the 'timeSeries' methods for `head` and `tail`.

- fixed a bug in the 'timeSeries' method for `stats::na.contiguous`, which
  caused the wrong stretch to be returned in the case of tied longest stretches
  one of whom starts at the beginning of the series. Similar bug was present in
  `stats::na.contiguous.default`, see my bug report to R-devel from 2023-06-02
  and the discussion there
  (https://stat.ethz.ch/pipermail/r-devel/2023-June/082642.html)

- removed deprecated functions `spreadSeries`, `midquoteSeries`, and
  `durationSeries`.  Use `spreads`, `midquotes`, and `durations`, respectively.

- removed deprecated function `colStdevs`, use `colSds()` instead.

- removed deprecated function `.description`, use `description()` instead.

- removed deprecated 'timeSeries' method for function `cut()`, use `window()`
  instead. The method was not compatible with t

--- a/finance/R-timeSeries/Makefile
+++ b/finance/R-timeSeries/Makefile
@@ -1,14 +1,20 @@
-# $NetBSD: Makefile,v 1.5 2022/04/02 03:10:26 wen Exp $
+# $NetBSD: Makefile,v 1.6 2025/01/04 15:06:50 mef Exp $
 
 R_PKGNAME=	timeSeries
-R_PKGVER=	3062.100
+R_PKGVER=	4041.111
 CATEGORIES=	finance
 
 MAINTAINER=	minskim@NetBSD.org
 COMMENT=	Financial time series objects
 LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
 
-DEPENDS+=	R-timeDate>=2150.95:../../time/R-timeDate
+DEPENDS+=	R-timeDate>=4041.110:../../time/R-timeDate
+
+# Packages suggested but not available:
+#   'xts', 'zoo', 'PerformanceAnalytics', 'fTrading'
+
+TEST_DEPENDS+=	R-RUnit-[0-9]*:../../devel/R-RUnit
+TEST_DEPENDS+=	R-robustbase-[0-9]*:../../math/R-robustbase
 
 USE_LANGUAGES=	# none
 
