--- a/www/py-nbconvert/Makefile
+++ b/www/py-nbconvert/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.36 2024/10/14 06:46:08 wiz Exp $
+# $NetBSD: Makefile,v 1.37 2025/01/04 15:27:43 adam Exp $
 
-DISTNAME=	nbconvert-7.16.4
+DISTNAME=	nbconvert-7.16.5
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=n/nbconvert/}
