--- a/finance/R-quantmod/Makefile
+++ b/finance/R-quantmod/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2023/06/11 23:10:03 mef Exp $
+# $NetBSD: Makefile,v 1.7 2025/01/04 22:38:15 mef Exp $
 
 R_PKGNAME=	quantmod
-R_PKGVER=	0.4.22
+R_PKGVER=	0.4.26
 CATEGORIES=	finance
 
 MAINTAINER=	minskim@NetBSD.org
@@ -13,6 +13,13 @@ DEPENDS+=	R-jsonlite-[0-9]*:../../textproc/R-jsonlite
 DEPENDS+=	R-TTR>=0.2:../../finance/R-TTR
 DEPENDS+=	R-xts>=0.9.0:../../math/R-xts
 DEPENDS+=	R-zoo>=1.8.6:../../math/R-zoo
+
+# Packages suggested but not available: 'RMySQL', 'downloader'
+TEST_DEPENDS+=	R-DBI-[0-9]*:../../math/R-DBI
+TEST_DEPENDS+=	R-RSQLite-[0-9]*:../../databases/R-RSQLite
+TEST_DEPENDS+=	R-timeSeries-[0-9]*:../../finance/R-timeSeries
+TEST_DEPENDS+=	R-xml2-[0-9]*:../../textproc/R-xml2
+
 
 USE_LANGUAGES=	# none
 
