--- a/geography/R-geosphere/Makefile
+++ b/geography/R-geosphere/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2022/05/02 12:40:15 mef Exp $
+# $NetBSD: Makefile,v 1.5 2025/01/05 01:52:04 mef Exp $
 
 R_PKGNAME=	geosphere
-R_PKGVER=	1.5-14
+R_PKGVER=	1.5-20
 CATEGORIES=	geography
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -14,7 +14,17 @@ DEPENDS+=	R-sp>=1.2.5:../../math/R-sp
 TEST_DEPENDS+=	R-raster-[0-9]*:../../geography/R-raster
 TEST_DEPENDS+=	tex-hanging-[0-9]*:../../print/tex-hanging
 
+# !pdfTeX error: pdflatex (file tcst1000): Font tcst1000 at 600 not found
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-hyperref-[0-9]*:../../print/tex-hyperref
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-natbib-[0-9]*:../../print/tex-natbib
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
+
 USE_LANGUAGES+=	c c++
 
+.include "../../devel/R-Rcpp/buildlink3.mk"
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
