--- a/x11/xfce4-session/Makefile
+++ b/x11/xfce4-session/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.120 2024/12/27 08:21:07 wiz Exp $
+# $NetBSD: Makefile,v 1.121 2025/01/06 19:27:40 bsiegert Exp $
 
-PKGREVISION= 6
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-DISTNAME=		xfce4-session-4.18.4
+DISTNAME=		xfce4-session-4.20.0
 CATEGORIES=		x11
 MASTER_SITES+=		https://archive.xfce.org/src/xfce/xfce4-session/${PKGVERSION_NOREV:R}/
 
@@ -22,13 +21,11 @@ USE_TOOLS+=		iceauth:run
 EGDIR=			${XFCE4_EGBASE}
 PKG_SYSCONFSUBDIR=	xdg
 
-MAKE_DIRS+=	${PKG_SYSCONFDIR} ${PKG_SYSCONFDIR}/autostart
-MAKE_DIRS+=	${EGDIR} ${EGDIR}/autostart ${EGDIR}/xfconf
+MAKE_DIRS+=	${PKG_SYSCONFDIR} 
+MAKE_DIRS+=	${EGDIR} ${EGDIR}/xfconf
 MAKE_DIRS+=	${EGDIR}/xfconf/xfce-perchannel-xml
 
-CONF_FILES=	${EGDIR}/autostart/xscreensaver.desktop			\
-		${PKG_SYSCONFDIR}/autostart/xscreensaver.desktop	\
-		${EGDIR}/xfconf/xfce-perchannel-xml/xfce4-session.xml	\
+CONF_FILES=	${EGDIR}/xfconf/xfce-perchannel-xml/xfce4-session.xml	\
 		${PKG_SYSCONFDIR}/xfce4/xfconf/xfce-perchannel-xml/xfce4-session.xml \
 		${EGDIR}/Xft.xrdb					\
 		${PKG_SYSCONFDIR}/xfce4/Xft.xrdb			\
@@ -41,10 +38,11 @@ CONF_FILES=	${EGDIR}/autostart/xscreensaver.desktop			\
 
 .include "options.mk"
 
+.include "../../devel/gettext-tools/msgfmt-desktop.mk"
 .include "../../devel/libwnck3/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
-BUILDLINK_API_DEPENDS.libxfce4ui+=	libxfce4ui>=4.18.2
 .include "../../x11/libxfce4ui/buildlink3.mk"
+.include "../../x11/libxfce4windowing/buildlink3.mk"
 .include "../../x11/xscreensaver/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
