lang/python*: No need for :U with USE_CROSS_COMPILE.
After including bsd.prefs.mk or bsd.fast.prefs.mk, this is guaranteed
to be defined.  If it isn't, there's a bug (like misspelling it),
which we should flag early rather than quietly suppress.

--- a/lang/python310/Makefile
+++ b/lang/python310/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.39 2025/01/07 19:34:41 riastradh Exp $
+# $NetBSD: Makefile,v 1.40 2025/01/07 19:35:08 riastradh Exp $
 
 .include "dist.mk"
 
@@ -55,7 +55,7 @@ PTHREAD_OPTS+=	require
 
 .include "../../mk/bsd.prefs.mk"
 
-.if ${USE_CROSS_COMPILE:U:tl} == "yes"
+.if ${USE_CROSS_COMPILE:tl} == "yes"
 TOOL_DEPENDS+=		${PKGNAME}:../../${PKGPATH}
 CONFIGURE_ARGS+=	\
 	PYTHON_FOR_BUILD=${TOOLBASE:Q}/bin/python${PY_VER_SUFFIX}
