--- a/lang/python311/Makefile
+++ b/lang/python311/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.37 2025/01/07 19:34:41 riastradh Exp $
+# $NetBSD: Makefile,v 1.38 2025/01/07 19:35:08 riastradh Exp $
 
 PKGREVISION=	1
 .include "dist.mk"
@@ -58,7 +58,7 @@ USE_CURSES=		getsyx wide
 FAKE_NCURSES=		yes
 .endif
 
-.if ${USE_CROSS_COMPILE:U:tl} == yes
+.if ${USE_CROSS_COMPILE:tl} == yes
 TOOL_DEPENDS+=		${PKGNAME}:../../${PKGPATH}
 CONFIGURE_ARGS+=	\
 	--with-build-python=${TOOLBASE:Q}/bin/python${PY_VER_SUFFIX}
