--- a/lang/python39/Makefile
+++ b/lang/python39/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.43 2025/01/07 19:34:41 riastradh Exp $
+# $NetBSD: Makefile,v 1.44 2025/01/07 19:35:09 riastradh Exp $
 
 .include "dist.mk"
 
@@ -54,7 +54,7 @@ PTHREAD_OPTS+=	require
 
 .include "../../mk/bsd.prefs.mk"
 
-.if ${USE_CROSS_COMPILE:U:tl} == "yes"
+.if ${USE_CROSS_COMPILE:tl} == "yes"
 TOOL_DEPENDS+=		${PKGNAME}:../../${PKGPATH}
 CONFIGURE_ARGS+=	\
 	PYTHON_FOR_BUILD=${TOOLBASE:Q}/bin/python${PY_VER_SUFFIX}
