--- a/lang/gcc10/Makefile
+++ b/lang/gcc10/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.25 2024/04/01 18:08:48 js Exp $
+# $NetBSD: Makefile,v 1.26 2025/01/07 19:54:31 riastradh Exp $
 
 PKGNAME=	${GCC_PKGNAME}-${GCC10_DIST_VERSION}
 ## When bumping the PKGREVISION of this package the PKGREVISION of
 ## lang/gcc10-libs needs to be bumped to be at least 1 more than the
 ## PKGREVISION of this package!
-PKGREVISION=	2
+PKGREVISION=	3
 
 COMMENT=	The GNU Compiler Collection (GCC) - 10.0 Release Series
 
