--- a/lang/gcc10/patches/patch-gcc_Makefile.in
+++ b/lang/gcc10/patches/patch-gcc_Makefile.in
@@ -1,4 +1,4 @@
-$NetBSD: patch-gcc_Makefile.in,v 1.2 2024/04/01 14:33:57 js Exp $
+$NetBSD: patch-gcc_Makefile.in,v 1.3 2025/01/07 19:54:31 riastradh Exp $
 
 Add gcc libdir to programs' rpath so that _this gcc's_ support libraries
 are found.
@@ -11,7 +11,7 @@ Add a hack to increase the stack for genautomata on QNX.
  # Language-independent files.
  
  DRIVER_DEFINES = \
-+  -DLINK_LIBGCC_SPEC="\"%D $(LINKER_RPATH_FLAG) $(prefix)//lib/%M $(LINKER_RPATH_FLAG) $(libdir)/%M \"" \
++  -DLINK_LIBGCC_SPEC="\"%D $(LINKER_RPATH_FLAG) $(prefix)/@GCC_TARGET_MACHINE@/lib/%M $(LINKER_RPATH_FLAG) $(libdir)/%M \"" \
    -DSTANDARD_STARTFILE_PREFIX=\"$(unlibsubdir)/\" \
    -DSTANDARD_EXEC_PREFIX=\"$(libdir)/gcc/\" \
    -DSTANDARD_LIBEXEC_PREFIX=\"$(libexecdir)/gcc/\" \
