lang/gcc13*: Fix LINK_LIBGCC_SPEC.
PR pkg/58963: gcc: LINK_LIBGCC_SPEC snafu
PR pkg/48740: lang/gcc44 to gcc46 linker fails because of whitespace

--- a/lang/gcc13-gnat/Makefile
+++ b/lang/gcc13-gnat/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.2 2024/03/08 13:25:12 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/07 19:55:52 riastradh Exp $
 
 GCC_PKGNAME=gcc13
 .include "../../lang/${GCC_PKGNAME}/version.mk"
 
 PKGNAME=	${GCC_PKGNAME}-gnat-${GCC13_DIST_VERSION}
+PKGREVISION=	1
 COMMENT=	GNAT Compiler and Ada tools
 DISTNAME=	gcc-${GCC13_DIST_VERSION}
 CATEGORIES=	lang
@@ -179,6 +180,22 @@ SUBST_STAGE.ccs=	pre-configure
 SUBST_FILES.ccs=	contrib/make_sunver.pl
 SUBST_SED.ccs=		-e 's,/usr/ccs/bin,/usr/bin,g'
 .endif
+
+# DO NOT REMOVE THIS SUBST.  If it fails, the corruption to
+# patch-gcc_Makefile.in chronicled in PR pkg/58963 `gcc:
+# LINK_LIBGCC_SPEC snafu' <https://gnats.NetBSD.org/58963> probably got
+# replicated yet again.  You must make sure that LINK_LIBGCC_SPEC is
+# appropriately set with @GCC_TARGET_MACHINE@ in patch-gcc_Makefile.in
+# or similar, or confirm with a discussion on tech-pkg@ that it is no
+# longer relevant before you remove this SUBST.
+SUBST_CLASSES+=		vars
+SUBST_MESSAGE.vars=	Setting target machine name path in ${SUBST_FILES.vars}
+SUBST_STAGE.vars=	pre-configure
+SUBST_FILES.vars=	gcc/Makefile.in
+SUBST_VARS.vars=	GCC_TARGET_MACHINE
+
+GCC_TARGET_MACHINE?=	${MACHINE_GNU_PLATFORM}
+BUILD_DEFS+=		GCC_TARGET_MACHINE
 
 CTF_FILES_SKIP+=	*/gengtype	# CPU limit exceeded
 
