--- a/lang/gcc14/Makefile
+++ b/lang/gcc14/Makefile
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile,v 1.1 2024/06/28 18:35:16 wiz Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/07 19:56:07 riastradh Exp $
 
 PKGNAME=	${GCC_PKGNAME}-${GCC14_DIST_VERSION}
 ## When bumping the PKGREVISION of this package the PKGREVISION of
 ## lang/gcc14-libs needs to be bumped to be at least 1 more than the
 ## PKGREVISION of this package!
+PKGREVISION=	1
 COMMENT=	The GNU Compiler Collection (GCC) - 14.0 Release Series
 
 LANGS=		c
