meta-pkgs/boost: Work around find -exec portability issue.
Solaris find(1) only replaces arguments that are exactly `{}' -- it
doesn't replace `{}' within arguments with other content -- so the
way this is done now leads to weird-looking failures like:

ERROR: The following files are in /home/pbulk/build/devel/boost-libs/work/.destdir/opt/pkg but not in the PLIST:
ERROR:         /home/pbulk/build/devel/boost-libs/work/.destdir/opt/pkg/lib/cmake/Boost-1.87.0/{}
ERROR:         /home/pbulk/build/devel/boost-libs/work/.destdir/opt/pkg/lib/cmake/boost_atomic-1.87.0/{}

No revbump because this only fixes the build in environments where
boost previously failed to build altogether because of PLIST
mismatches; no change to builds that worked.

However, it looks like this is missing a lot of files, and it's not
fatal because we didn't use ${RUN} (and didn't use `set -e'
explicitly either) so nobody noticed before:

install: /home/riastradh/pkgsrc/current/work/devel/boost-libs/work/.destdir/home/riastradh/pkgsrc/current/pkg/lib/cmake/./boost_stacktrace_from_exception-1.87.0/boost_stacktrace_from_exception-config-version.cmake: open: No such file or directory
install: /home/riastradh/pkgsrc/current/work/devel/boost-libs/work/.destdir/home/riastradh/pkgsrc/current/pkg/lib/cmake/./boost_stacktrace_from_exception-1.87.0/libboost_stacktrace_from_exception-variant-shared.cmake: open: No such file or directory
...

--- a/meta-pkgs/boost/Makefile.common
+++ b/meta-pkgs/boost/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.105 2025/01/07 15:32:44 jperkin Exp $
+# $NetBSD: Makefile.common,v 1.106 2025/01/08 12:24:22 riastradh Exp $
 #
 # used by devel/boost-build/Makefile
 # used by devel/boost-docs/Makefile
@@ -103,7 +103,11 @@ boost-install-libs:
 boost-install-cmake:
 .  for dir in ${BOOST_CMAKE_DIRS}
 	${INSTALL_DATA_DIR} ${DESTDIR}${PREFIX}/lib/${dir}
-	cd ${WRKSRC}/stage/lib/${dir} && ${FIND} . -type f -name "*.cmake" -exec ${INSTALL_DATA} '{}' ${DESTDIR}${PREFIX}/lib/${dir}/'{}' \;
+	cd ${WRKSRC}/stage/lib/${dir} && \
+	${FIND} . -type f -name "*.cmake" \
+	| while read f; do \
+		${INSTALL_DATA} "$$f" ${DESTDIR}${PREFIX}/lib/${dir}/"$$f"; \
+	done
 .  endfor
 
 .endif # ${BOOST_PACKAGE} == "meta-pkg"
