ffmpeg*: Limit -ld_classic workaround to clang-15.
Fixes builds with older XCode that do not support that option.

--- a/multimedia/ffmpeg6/Makefile.common
+++ b/multimedia/ffmpeg6/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.8 2024/08/03 06:52:01 adam Exp $
+# $NetBSD: Makefile.common,v 1.9 2025/01/09 10:16:04 jperkin Exp $
 # used by multimedia/ffmpeg6/Makefile
 # used by multimedia/ffplay6/Makefile
 
@@ -34,7 +34,9 @@ CONFIGURE_ARGS+=	--libdir=${PREFIX}/lib/ffmpeg6
 CONFIGURE_ARGS+=	--shlibdir=${PREFIX}/lib/ffmpeg6
 LDFLAGS+=		${COMPILER_RPATH_FLAG}${PREFIX}/lib/ffmpeg6
 # https://github.com/homebrew-ffmpeg/homebrew-ffmpeg/issues/140
+.if ${CC_VERSION:Mclang-15.*}
 LDFLAGS.Darwin+=	-Wl,-ld_classic
+.endif
 
 .if ${USE_CROSS_COMPILE:tl} == yes
 CONFIGURE_ARGS+=	--enable-cross-compile
