lighttpd: update to 1.4.77. Changes:
* [build] packdist.sh tweaks of convenience commands
* [build] remove ancient distribute.sh.in script
* [core] add .torrent to mimetype.assign builtin defaults
* Revert "[core] special value for Linux POLLRDHUP on SPARC" (fixes #3251)
* [core] special value for Linux POLLRDHUP on SPARC (fixes #3251)
* [mod_ssi] rename ssi_val_tobool to ssi_val_to_bool
* [multiple] rename config_plugin_value_tobool
* [core] fix graceful shutdown timeout handling
* [core] preprocessor option to force crypto lib
* [cmake] fix some typos in pcre2 detection
* [tests] disambiguate regex test value from string
* [tests] fix deflate tests w/ Fedora zlib-ng-compat
* [core] port for QNX7.1/8.0
* [doc] remove ancient doc/scripts/spawn-php.sh
* [mod_deflate] limit zstd max window size to 8 MB
* [mod_accesslog] ignore format specifier w/o label
* [autotools] add pkgconf test for libdbi
* [mod_webdav] use SQLITE_PREPARE_PERSISTENT
* [mod_webdav] call sqlite3_initialize() at init
* [mod_webdav] disable double-quoted string literal
* [core] clarify error msg for plugin ver mismatch
* [mod_dirlisting] Add dark mode support
* [autotools] Prefer libpcre.pc to pcre-config
* [core] server.ip-transparent option on listen sock
* [core] reject HTTP/1.x request-line URI trail sp
* [core] remove http_request_parse_proto_loose()
* [core] strictly require CRLF on chunked header
* [core] strictly require CRLF on all chunked header
* [multiple] quiet coverity false positives
* [core] http_request_check_uri_strict optimization
* [h2] fix spurious connection resets with zero log_monotonic_secs
* [mod_dirlisting] fix ?json output; emit JSON list (fixes #3256)
* [mod_dirlisting] minor optimization for ?json
* [mod_auth] fix Digest nonce validation w/ nonce_secret
* [core] omit pcre2 JIT error trace if JIT not avail
* [doc] rename sample config lighttpd.annotated.conf
* [doc] simplify doc/config/lighttpd.conf entry
* [doc] use shorter https://wiki.lighttpd.net/ url
* [meson] use p

--- a/www/lighttpd/patches/patch-doc_config_lighttpd.annotated.conf
+++ b/www/lighttpd/patches/patch-doc_config_lighttpd.annotated.conf
@@ -1,9 +1,9 @@
-$NetBSD: patch-doc_config_lighttpd.conf,v 1.8 2021/12/03 15:55:55 schmonz Exp $
+$NetBSD: patch-doc_config_lighttpd.annotated.conf,v 1.1 2025/01/10 21:29:37 schmonz Exp $
 
 Sane defaults.
 
---- doc/config/lighttpd.conf.orig	2021-12-02 04:53:23.000000000 +0000
-+++ doc/config/lighttpd.conf
+--- doc/config/lighttpd.annotated.conf.orig	2025-01-10 04:12:08.000000000 +0000
++++ doc/config/lighttpd.annotated.conf
 @@ -13,11 +13,11 @@
  ## if you add a variable here. Add the corresponding variable in the
  ## chroot example as well.
@@ -18,7 +18,7 @@ Sane defaults.
 +var.home_dir    = "@LIGHTTPD_HOMEDIR@"
 +var.conf_dir    = "@PKG_SYSCONFDIR@"
  
- ## 
+ ##
  ## run the server chrooted.
 @@ -58,7 +58,7 @@ var.vhosts_dir  = server_root + "/vhosts
  ## used in:
@@ -29,9 +29,9 @@ Sane defaults.
  
  ##
  ## Base directory for sockets.
-@@ -101,8 +101,8 @@ server.use-ipv6 = "enable"
+@@ -97,8 +97,8 @@ include conf_dir + "/modules.conf"
  ## Run as a different username/groupname.
- ## This requires root permissions during startup. 
+ ## This requires root permissions during startup.
  ##
 -server.username  = "lighttpd"
 -server.groupname = "lighttpd"
@@ -40,7 +40,7 @@ Sane defaults.
  
  ##
  ## Enable lighttpd to serve requests on sockets received from systemd
-@@ -410,7 +410,7 @@ include conf_dir + "/conf.d/dirlisting.c
+@@ -389,7 +389,7 @@ include conf_dir + "/conf.d/dirlisting.c
  ##
  ## defaults to /var/tmp as we assume it is a local harddisk
  ## default: "/var/tmp"
