databases/{gdbm,gdbm_compat}: Update to 1.24
Changelog:
1.24:
New gdbm_load option: --update

The --update (-U) option instructs gdbm_load to update an existing database.

Fix semantics of gdbm_load -r

The --replace (-r) is valid only when used together with --update.

Use getline in gdbmtool shell

New function: gdbm_load_from_file_ext

In contrast to gdbm_load and gdbm_load_from_file, which derive the value of the flag parameter for gdbm_open from the value of their replace argument, this function allows the caller to specify it explicitly.

Bugfixes

 *  Fix binary dump format for key and/or data of zero size (see bug #565)
 *  Fix location tracking and recover command in gdbtool (see bug #566)
 *  Fix possible buffer underflow in gdbmload.
 *  Ensure any padding bytes in avail_elem structure are filled with 0. This fixes https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1031276.
 *  Improve the documentation

--- a/databases/gdbm/Makefile.common
+++ b/databases/gdbm/Makefile.common
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile.common,v 1.13 2022/02/15 09:26:46 wiz Exp $
+# $NetBSD: Makefile.common,v 1.14 2025/01/11 13:57:43 ryoon Exp $
 #
 # used by databases/gdbm/Makefile
 # used by databases/gdbm_compat/Makefile
 
-DISTNAME=	gdbm-1.23
+DISTNAME=	gdbm-1.24
 CATEGORIES=	databases
 MASTER_SITES=	${MASTER_SITE_GNU:=gdbm/}
 
